k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcheck
  labels:
    app.kubernetes.io/managed-by: kustomize
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
