k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-k8s-healthcheck
  namespace: healthcheck
  labels:
    app.kubernetes.io/name: go-k8s-healthcheck
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: go-k8s-healthcheck
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
